id: 128349 Fix Guest align

--- a/app/Resources/sass/modules/_meal.scss
+++ b/app/Resources/sass/modules/_meal.scss
@@ -284,7 +284,7 @@
 
   .wrapper-vertical-center {
     right: 0;
-    width: 25%;
+    width: 30%;
 
     @include breakpoint(small) {
       width: 30%;
@@ -309,6 +309,7 @@
   .participants {
     width: 50%;
     margin-left: 25%;
+    text-align: right;
 
     @include breakpoint(small) {
       width: 65%;
@@ -324,6 +325,7 @@
   .action {
     width: 25%;
     padding-top: 4px;
+    padding-left: 8px;
   }
 }
 
